[package]
name = "cairo-lang-rs"
version = "0.1.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/mattsse/cairo-lang-rs"
repository = "https://github.com/mattsse/cairo-lang-rs"


[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
lalrpop-util = { version = "0.19.6", features = ["lexer"] }
thiserror = "1.0.30"
unicode-xid = "0.2.2"

# compiler deps
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
eyre = "0.6.5"
log = "0.4.14"

[dev-dependencies]
pretty_assertions = "1.0.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
